[package]
name = "path_to_unicode_filename"
version = "0.1.0"
edition = "2021"
description = "The library encodes file path separators and common directory names, producing a reversible unicode string that can be used as a filename. It's useful in the case when you want to extract data or features from any file and store them in a specific directory."
license = "MIT OR Apache-2.0"
repository = "https://github.com/amachang/path_to_unicode_filename"
keywords = ["path", "filename", "escape", "encode", "unicode"]
categories = ["filesystem"]

[dependencies]
nom = "7.1.3"

[dev-dependencies]
ucd = "0.1.1"
